erDiagram
  raw_users {
    varchar user_id PK
    varchar email
    varchar username
    varchar country
    datetime signup_date
    int birth_year
    timestamp loaded_at
  }
  raw_subscriptions {
    varchar subscription_id PK
    varchar user_id FK
    varchar plan_type
    varchar status
    date start_date
    date end_date
    decimal monthly_price
  }
  raw_content {
    varchar content_id PK
    varchar title
    varchar content_type
    varchar genre
    int release_year
    int duration_minutes
    boolean is_original
    decimal production_cost_usd
  }
  raw_viewing_events {
    varchar event_id PK
    varchar user_id FK
    varchar content_id FK
    varchar event_type
    varchar device_type
    int watch_duration_sec
    datetime event_timestamp
  }
  dim_users {
    int user_key PK
    varchar user_id UK
    varchar email
    varchar region
    varchar age_group
    date signup_date
    int signup_date_key FK
    varchar current_plan_type
  }
  dim_content {
    int content_key PK
    varchar content_id UK
    varchar title
    varchar content_type
    varchar genre
    varchar decade
    varchar duration_bucket
    varchar cost_tier
  }
  dim_date {
    int date_key PK
    date full_date UK
    varchar day_name
    tinyint month_number
    tinyint quarter
    smallint yr
    boolean is_weekend
    varchar ym_label
  }
  dim_device {
    tinyint device_key PK
    varchar device_type UK
    varchar device_category
  }
  fact_viewing_events {
    bigint event_key PK
    varchar event_id UK
    varchar user_id FK
    varchar content_id FK
    int date_key FK
    tinyint device_key FK
    varchar event_type
    decimal watch_duration_minutes
    boolean is_completed
    tinyint hour_of_day
    varchar day_period
    int session_order
  }
  fact_subscriptions {
    bigint subscription_key PK
    varchar subscription_id UK
    varchar user_id FK
    varchar plan_type
    tinyint plan_rank
    varchar status
    boolean is_active
    int start_date_key FK
    decimal monthly_price
    int duration_days
    decimal estimated_ltv
  }
  mart_user_engagement {
    varchar user_id PK
    varchar region
    varchar age_group
    varchar current_plan
    int total_watch_events
    decimal completion_rate
    varchar favorite_device
    varchar churn_risk
  }
  mart_content_performance {
    varchar content_id PK
    varchar title
    int total_views
    decimal completion_rate
    decimal views_per_dollar
    int popularity_rank
  }
  mart_subscription_metrics {
    varchar ym PK
    int new_subscriptions
    int total_active
    decimal monthly_revenue
    decimal avg_revenue_per_user
  }

  raw_users ||--o{ raw_subscriptions : "has"
  raw_users ||--o{ raw_viewing_events : "generates"
  raw_content ||--o{ raw_viewing_events : "watched_in"

  dim_users ||--o{ fact_viewing_events : "watches"
  dim_content ||--o{ fact_viewing_events : "viewed_as"
  dim_date ||--o{ fact_viewing_events : "on_date"
  dim_device ||--o{ fact_viewing_events : "via_device"
  dim_users ||--o{ fact_subscriptions : "subscribes"
  dim_date ||--o{ fact_subscriptions : "starts_on"

  dim_users ||--|| mart_user_engagement : "summarized_in"
  dim_content ||--|| mart_content_performance : "summarized_in"
  fact_viewing_events }o--|| mart_user_engagement : "aggregated_into"
  fact_viewing_events }o--|| mart_content_performance : "aggregated_into"
  fact_subscriptions }o--|| mart_subscription_metrics : "aggregated_into"
